# tinyTatics

./: .gitignore  CMakeLists.txt  CMakePresets.json  tinyTactis.md
Assets/Shaders/: FlatColor.frag  FlatColor.vert
Docs/: LocalToolchainGuide.md  OpenGLDependencyGuide.md  README.md  RenderingStepGuide.md  ShaderGuide.md  VSCodeGuide.md
Docs/Guides/: MigrationGuide.md  PortableVSCodeGuide.md
Docs/KnowledgeBase/: CameraShaderMatrixLearningGuide.md  CppResourceOwnershipLearningGuide.md  DebuggerModuleLoadingMessagesGuide.md  OpenGLApiLearningGuide.md  ShaderLearningNotes.md  ShutdownHeapCorruptionGuide.md
scripts/: NewTinyClass.ps1  cmake-msvc-env.cmd
src/Engine/Core/: Application.cpp  Application.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  TimeStep.h  Window.cpp  Window.h  core.h
src/Engine/Renderer/: BufferLayout.cpp  BufferLayout.h  Camera2D.cpp  Camera2D.h  IndexBuffer.cpp  IndexBuffer.h  RenderCommand.cpp  RenderCommand.h  Renderer2D.cpp  Renderer2D.h  Shader.cpp  Shader.h  Texture2D.cpp  Texture2D.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h
src/Sandbox/: main.cpp
src/Sandbox/Layers/: baseLayer.cpp  baseLayer.h
